| Summary: | ASTERISK-28904: RTP ICE leaks the memory | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2020-05-18 11:23:12 | Date Closed: | 2020-05-19 13:22:31 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 13.33.0 16.10.0 17.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | rtp_add_candidates_to_ice() function leaks the memory.
{noformat} ==4869== 1,424,304 bytes in 1,099 blocks are definitely lost in loss record 13,277 of 13,281 ==4869== at 0x4C2DBC5: calloc (vg_replace_malloc.c:711) ==4869== by 0x8217BBC: getifaddrs_internal (ifaddrs.c:411) ==4869== by 0x821871F: getifaddrs (ifaddrs.c:831) ==4869== by 0x1F66EA55: rtp_add_candidates_to_ice (res_rtp_asterisk.c:3485) ==4869== by 0x1F66F640: ice_create (res_rtp_asterisk.c:3733) ==4869== by 0x1F66FAFC: rtp_allocate_transport (res_rtp_asterisk.c:3815) ==4869== by 0x1F6700A5: ast_rtp_new (res_rtp_asterisk.c:3945) ==4869== by 0x27203D: ast_rtp_instance_new (rtp_engine.c:535) ==4869== by 0x36430AEF: create_rtp (res_pjsip_sdp_rtp.c:271) ==4869== by 0x364353DB: create_outgoing_sdp_stream (res_pjsip_sdp_rtp.c:1645) ==4869== by 0x1F04ED78: add_sdp_streams (res_pjsip_session.c:4102) ==4869== by 0x1F04F3E9: create_local_sdp (res_pjsip_session.c:4256) {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-05-18 11:23:13.203-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Joshua C. Colp (jcolp) 2020-05-18 11:25:50.532-0500 The pasted information is unrelated to ICE candidates, and the media cache is kept in memory. It's likely just not getting cleaned up at shutdown. Did you copy/paste the wrong thing? By: Friendly Automation (friendly-automation) 2020-05-19 13:22:33.454-0500 Change 14431 merged by Friendly Automation: res_rtp_asterisk.c: Fixed memory leak [https://gerrit.asterisk.org/c/asterisk/+/14431|https://gerrit.asterisk.org/c/asterisk/+/14431] By: Friendly Automation (friendly-automation) 2020-05-19 13:22:53.155-0500 Change 14416 merged by Friendly Automation: res_rtp_asterisk.c: Fixed memory leak [https://gerrit.asterisk.org/c/asterisk/+/14416|https://gerrit.asterisk.org/c/asterisk/+/14416] By: Friendly Automation (friendly-automation) 2020-05-19 13:24:45.032-0500 Change 14430 merged by Friendly Automation: res_rtp_asterisk.c: Fixed memory leak [https://gerrit.asterisk.org/c/asterisk/+/14430|https://gerrit.asterisk.org/c/asterisk/+/14430] By: Friendly Automation (friendly-automation) 2020-05-19 13:38:33.969-0500 Change 14429 merged by Kevin Harwell: res_rtp_asterisk.c: Fixed memory leak [https://gerrit.asterisk.org/c/asterisk/+/14429|https://gerrit.asterisk.org/c/asterisk/+/14429] | ||